<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/button_search"
        android:checked="true"
        android:icon="@drawable/ic_search"
        android:title="Search"
        app:showAsAction="ifRoom">

    </item>
    <item
        android:id="@+id/button_home"
        android:title="@string/title_button_menu1"
        app:showAsAction="never">

    </item>
    <item
        android:id="@+id/button_favorite"
        android:title="@string/title_button_menu2"
        app:showAsAction="never">

    </item>
    <item
        android:id="@+id/button_category"
        android:title="@string/title_button_menu3"
        app:showAsAction="never">

    </item>

</menu>